# OmniEngine

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  implementation_planchatbot  pyproject.toml
.github/workflows/: deploy.yml
backend/: __init__.py  main.py
backend/agents/: __init__.py  model_router.py  orchestrator.py  prompts.py  state.py
backend/agents/nodes/: __init__.py  evaluator.py  planner.py  rag_retriever.py  response_formatter.py  supervisor.py  tool_executor.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep
backend/api/: __init__.py  dependencies.py  schemas.py
backend/api/routes/: __init__.py  chat.py  health.py  sessions.py
backend/core/: __init__.py  cleanup.py  config.py  database.py  document_parser.py  exceptions.py  logging_config.py  redis_client.py  security.py
backend/memory/: __init__.py  context_manager.py  models.py  summarizer.py  vector_store.py
backend/safety/: __init__.py  input_guard.py  output_guard.py  pii_redactor.py
backend/telemetry/: __init__.py  metrics.py
backend/tests/: __init__.py  conftest.py  test_memory.py  test_model_router.py  test_safety.py  test_schemas.py
backend/tools/: __init__.py  calendar_agent.py  code_interpreter.py  registry.py  vision_analyzer.py  web_search.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/chat/: ChatContainer.tsx  ChatInput.tsx  MessageBubble.tsx  MessageList.tsx  Sidebar.tsx
frontend/src/components/markdown/: ChartRenderer.tsx  CodeBlock.tsx  MarkdownRenderer.tsx
frontend/src/components/ui/: ThinkingIndicator.tsx
frontend/src/lib/: api.ts  hooks.ts  types.ts
infra/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.sandbox
infra/k8s/helm/: Chart.yaml  values.yaml
infra/k8s/helm/templates/: _helpers.tpl  configmap.yaml  deployment-backend.yaml  deployment-frontend.yaml  hpa.yaml  ingress.yaml  networkpolicy.yaml  secrets.yaml  service.yaml
