# =============================================================================
# OmniEngine — Python Project Configuration
# =============================================================================
[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "omniengine"
version = "1.0.0"
description = "Production-grade multi-model multi-agent conversational AI system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "OmniEngine Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # --- Web Framework ---
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "sse-starlette>=2.1.0,<3.0",
    "python-multipart>=0.0.12",

    # --- LangChain / LangGraph ---
    "langchain-core>=0.3.20,<1.0",
    "langchain-openai>=0.2.10,<1.0",
    "langchain-anthropic>=0.3.0,<1.0",
    "langchain-google-genai>=2.0.5,<3.0",
    "langgraph>=0.2.50,<1.0",
    "langgraph-checkpoint>=2.0.0,<3.0",

    # --- Database ---
    "sqlalchemy[asyncio]>=2.0.35,<3.0",
    "asyncpg>=0.30.0,<1.0",
    "alembic>=1.14.0,<2.0",
    "greenlet>=3.1.0",  # Required by SQLAlchemy async

    # --- Cache & Messaging ---
    "redis[hiredis]>=5.2.0,<6.0",

    # --- Vector Database ---
    "qdrant-client>=1.12.0,<2.0",

    # --- Data Validation ---
    "pydantic>=2.9.0,<3.0",
    "pydantic-settings>=2.6.0,<3.0",

    # --- HTTP Client ---
    "httpx>=0.27.0,<1.0",
    "aiohttp>=3.10.0,<4.0",

    # --- Observability ---
    "structlog>=24.4.0",

    # --- Token Management ---
    "tiktoken>=0.8.0,<1.0",

    # --- Tools ---
    "tavily-python>=0.5.0,<1.0",
    "docker>=7.1.0,<8.0",

    # --- Safety ---
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",

    # --- Utilities ---
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0,<4.0",
    "tenacity>=9.0.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.12.0",
    "pre-commit>=4.0.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "respx>=0.21.0",  # Mock httpx
]

load-test = [
    "locust>=2.31.0",
]

[project.scripts]
omni-server = "backend.main:run"
omni-cleanup = "backend.core.cleanup:run_cleanup"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.hatch.build.targets.wheel]
packages = ["backend"]

# --- Ruff (Linting & Formatting) ---
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["backend"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "ASYNC",# flake8-async
]
ignore = [
    "S101",  # assert used (OK in tests)
    "B008",  # function calls in default args (FastAPI Depends)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**/*.py" = ["S101", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]
timeout = 30

# --- MyPy ---
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_anthropic.*",
    "langchain_google_genai.*",
    "langgraph.*",
    "qdrant_client.*",
    "tavily.*",
    "presidio_analyzer.*",
    "presidio_anonymizer.*",
    "tiktoken.*",
    "docker.*",
    "sse_starlette.*",
    "redis.*",
]
ignore_missing_imports = true

# --- Coverage ---
[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/alembic/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]
fail_under = 70
show_missing = true
